--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,18 @@
 
 - 28.10.15 - 1.2.0.0:
 * Substantial rewrite, complete and all-encompassing exception handling
+ 
+- 28.10.15 (later that night) - 1.2.1.0:
+* Made Corruption Power actually affect everything
+
+- 29.10.15 (at the break of dawn) - 1.2.1.1:
+* Fixed Safe.CopyFile and several functions that broke during the 1.2 update
 
 - 07.11.15 - 1.3.3.7:
 * Updated for Afterbirth
+
+- 17.11.15 - 1.3.3.8:
+* Fixed a thing and removed a debug message
+
+- 19.11.15 - 1.3.3.9:
+* Code cleanup (as much as you can clean up delegates anyway)
